--- a/404.html
+++ b/404.html
@@ -1,68 +1,100 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Page Not Found</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        .not-found-container {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 80vh;
-            text-align: center;
-        }
-        .not-found-container h1 {
-            font-size: 5em;
-            margin: 0;
-            color: #333;
-        }
-        .not-found-container p {
-            font-size: 1.5em;
-            color: #666;
-        }
-        .not-found-container a {
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #004085;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-    </style>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=1024">
+        <title>404 - Page Not Found</title>
+        <link rel="stylesheet" href="style.css" />
+        <style>
+            .not-found-container {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                height: 80vh;
+                text-align: center;
+            }
+            .not-found-container h1 {
+                font-size: 5em;
+                margin: 0;
+                color: #333;
+            }
+            .not-found-container p {
+                font-size: 1.5em;
+                color: #666;
+            }
+            .not-found-container a {
+                margin-top: 20px;
+                padding: 10px 20px;
+                background-color: #004085;
+                color: #fff;
+                text-decoration: none;
+                border-radius: 5px;
+            }
+        </style>
+    </head>
+    <body>
+        <header class="header">
+            <div class="container header-container">
+                <h1 class="logo">HY-CoRA</h1>
+                <nav class="nav">
+                    <ul>
+                        <li><a href="about.html">소개</a></li>
+                        <li><a href="activities.html">활동내용</a></li>
+                        <li><a href="apply.html">모집안내/가입</a></li>
+                        <li><a href="announcement.html">공지사항</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-    <header class="header">
-        <div class="container header-container">
-            <h1 class="logo">HY-CoRA</h1>
-            <nav class="nav">
-                <ul>
-                    <li><a href="about.html">소개</a></li>
-                    <li><a href="activities.html">활동 내용</a></li>
-                    <li><a href="apply.html">모집 안내/가입</a></li>
-                    <li><a href="announcement.html">공지사항</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+        <main>
+            <div class="not-found-container">
+                <h1>404</h1>
+                <p>죄송합니다, 페이지를 찾을 수 없습니다.</p>
+                <a href="index.html">홈으로 돌아가기</a>
+            </div>
+        </main>
 
-    <main>
-        <div class="not-found-container">
-            <h1>404</h1>
-            <p>죄송합니다, 페이지를 찾을 수 없습니다.</p>
-            <a href="index.html">홈으로 돌아가기</a>
-        </div>
-    </main>
+        <footer class="footer">
+            <div class="container footer-content">
+                <!-- Top: Copyright -->
+                <div class="footer-top">
+                    <p>Copyright 2025. HY-CoRA All rights reserved.</p>
+                    <a
+                        href="https://www.instagram.com/hycora_hanyang/"
+                        target="_blank"
+                        rel="noopener"
+                        class="social-icon"
+                    >
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
 
-    <footer class="footer">
-        <div class="container footer-content">
-            <p>경기도 안산시 상록구 한양대학로 55 복지관 425호 (동방 주소)<br>hycora369@gmail.com</p>
-            <p>&nbsp;&nbsp;&nbsp;회장: 010-3552-2044<br>부회장: 010-3410-4697</p>
-        </div>
-    </footer>
+                <!-- Divider -->
+                <div class="footer-divider" aria-hidden="true"></div>
 
-</body>
+                <!-- Bottom: 좌측 주소/메일 / 우측 회장·부회장 -->
+                <div class="footer-bottom">
+                    <p class="footer-detail">
+                        <strong>Made by HY-CoRA</strong> <br />
+                        2025 ver. Create by <strong> 팀</strong> 이한, 최관우,
+                        김현준, 김혜윤, 박아진, 박강호, 최지민 <br /><br />
+                        경기도 안산시 상록구 한양대학로 55 복지관 425호<br />
+                        hycora369@gmail.com
+                    </p>
+                    <div class="contacts">
+                        <div class="contact-block">
+                            <h3>회장</h3>
+                            <p>이한 010-3552-2044</p>
+                        </div>
+                        <div class="contact-block">
+                            <h3>부회장</h3>
+                            <p>최관우 010-3410-4697</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </body>
 </html>
