--- a/notice-detail.html
+++ b/notice-detail.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=1024">
-        <title>HY-CoRA - 공지사항</title>
+        <title>HY-CoRA - 모집상세</title>
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -33,36 +33,16 @@
             <!-- 상단 소개 배너 -->
             <div class="top-header">
                 <div class="top-title">
-                    <h2>공지사항</h2>
+                    <h2>공지상세</h2>
                 </div>
                 <div class="top-subtitle">
-                    <p>동아리의 최신 소식과 중요한 공지사항을 확인하세요.</p>
+                    <p>공지 세부사항을 확인하세요.</p>
                 </div>
             </div>
 
             <section class="notices-section">
                 <div class="container">
-                    <div class="notices-nav">
-                        <button class="nav-button active">전체</button>
-                        <button class="nav-button">행사</button>
-                        <button class="nav-button">모집</button>
-                        <button class="nav-button">기타</button>
-                    </div>
-
-                    <table class="notices-table">
-                        <thead>
-                            <tr>
-                                <th>제목</th>
-                                <th>내용</th>
-                                <th>일자</th>
-                                <th>분류</th>
-                            </tr>
-                        </thead>
-                        <tbody></tbody>
-                    </table>
-
-                    <!-- ✅ 이게 반드시 있어야 버튼이 보임 -->
-                    <div id="pagination" class="pagination"></div>
+                    <!-- JS가 notice를 주입 -->
                 </div>
             </section>
         </main>
@@ -103,8 +83,7 @@
             </div>
         </footer>
 
-        <!-- 목록 스크립트 -->
-        <script src="js/announcement.js"></script>
-        <script src="js/nav.js"></script>
+        <!-- 상세 스크립트 -->
+        <script src="js/notice-detail.js"></script>
     </body>
 </html>
