Update on Fix-10

--- a/announcement_notice_detail.html
+++ b/announcement_notice_detail.html
@@ -30,7 +30,7 @@
         </header>
 
         <main>
-            <!-- JS가 내용 주입 -->
+            <!-- JS가 notice를 주입 -->
         </main>
 
         <footer class="footer">
@@ -70,7 +70,6 @@
         </footer>
 
         <!-- 상세 스크립트 -->
-        <script src="js/announcement_detail.js"></script>
-        <script src="js/nav.js"></script>
+        <script src="js/announcement_notice_detail.js"></script>
     </body>
 </html>
