--- a/announcement_etc_detail.html
+++ b/announcement_etc_detail.html
@@ -70,6 +70,6 @@
         </footer>
 
         <!-- 상세 스크립트 -->
-        <script src="js/notice-detail.js"></script>
+        <script src="js/announcement_etc_detail.js"></script>
     </body>
 </html>
