--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=1024">
+    <meta name="description" content="HY-CoRA는 한양대 ERICA 유일의 컴퓨터 연구 동아리입니다. C언어, 파이썬 등 기초 스터디부터 웹/앱 프로젝트, 알고리즘, 데이터 분석까지 폭넓게 다룹니다.">
+    <meta name="keywords" content="하이코라 동아리 소개, 스터디, 웹 개발, 알고리즘, 자료구조, 데이터, 동아리방">
     <title>HY-CoRA - 동아리소개</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
