--- a/activities.html
+++ b/activities.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=1024">
+        <meta name="description" content="HY-CoRA의 다채로운 활동을 소개합니다. 정규 스터디, MT, asv(안산사이언스벨리) 부스 활동, 선배와의 네트워킹 데이, 코라코라 열공단 등 선배, 동기, 후배와 함께하는 즐거운 동아리 활동을 확인해보세요.">
+        <meta name="keywords" content="동아리 활동, 코라코라 열공단, 자율 스터디, MT, 네트워킹, 코딩 프로젝트">
         <title>HY-CoRA - 활동내용</title>
         <link
             rel="stylesheet"
