--- a/apply.html
+++ b/apply.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=1024">
+        <meta name="description" content="HY-CoRA 신입 부원 모집 안내. 코딩에 대한 열정만 있다면 전공, 학년 무관 누구나 지원 가능합니다. 모집 일정과 지원 방법을 확인하고 하이코라의 멤버가 되어보세요.">
+        <meta name="keywords" content="동아리 모집, 신입부원, 가입 안내, 지원 방법, 코딩 동아리 지원">
         <title>HY-CoRA - 모집/가입안내</title>
         <link
             rel="stylesheet"
