--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=1024">
+        <meta name="description" content="한양대학교 ERICA 캠퍼스 컴퓨터 중앙 동아리 HY-CoRA입니다. 프로그래밍 스터디, 프로젝트, 공모전 등 다양한 활동을 통해 함께 성장할 신입 부원을 모집합니다.">
+        <meta name="keywords" content="HY-CoRA, 하이코라, 한양대, 한양대학교, ERICA, 컴퓨터 동아리, 코딩 동아리, 프로그래밍, IT 동아리">
         <title>HY-CoRA - 홈</title>
         <link
             rel="stylesheet"
