--- a/apply.html
+++ b/apply.html
@@ -2,9 +2,15 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=1024">
-        <meta name="description" content="HY-CoRA 신입 부원 모집 안내. 코딩에 대한 열정만 있다면 전공, 학년 무관 누구나 지원 가능합니다. 모집 일정과 지원 방법을 확인하고 하이코라의 멤버가 되어보세요.">
-        <meta name="keywords" content="동아리 모집, 신입부원, 가입 안내, 지원 방법, 코딩 동아리 지원">
+        <meta name="viewport" content="width=1024" />
+        <meta
+            name="description"
+            content="HY-CoRA 신입 부원 모집 안내. 코딩에 대한 열정만 있다면 전공, 학년 무관 누구나 지원 가능합니다. 모집 일정과 지원 방법을 확인하고 하이코라의 멤버가 되어보세요."
+        />
+        <meta
+            name="keywords"
+            content="동아리 모집, 신입부원, 가입 안내, 지원 방법, 코딩 동아리 지원"
+        />
         <title>HY-CoRA - 모집/가입안내</title>
         <link
             rel="stylesheet"
@@ -95,8 +101,8 @@
                         <div class="inner-card">
                             <h4>지원 자격 / FAQ / 문의</h4>
                             <p>
-                                <b>지원자격</b> · <b>FAQ</b> ·
-                                <b>문의</b> 페이지에서 자세히 확인하세요.
+                                <b id="FAQ-hyperlink">지원자격 · FAQ · 문의</b>
+                                페이지에서 자세히 확인하세요.
                             </p>
                         </div>
                     </div>
@@ -164,8 +170,8 @@
                         <div class="inner-card">
                             <h4>모집 일정 확인</h4>
                             <p>
-                                <b>모집 일정</b>에서 학기별 타임라인을
-                                확인하세요.
+                                <b id="apply_schedule">모집 일정</b>에서 학기별
+                                타임라인을 확인하세요.
                             </p>
                         </div>
                     </div>
@@ -173,7 +179,7 @@
                         <div class="card-label">문의</div>
                         <div class="inner-card">
                             <h4>질문이 있다면</h4>
-                            <p><b>문의</b>로 연락주세요.</p>
+                            <p id="inquiry"><b>문의</b>로 연락주세요.</p>
                         </div>
                     </div>
                 </div>
@@ -233,20 +239,19 @@
                     <div class="outer-card">
                         <div class="card-label">방문</div>
                         <div class="inner-card">
-                            <h4>오프라인</h4>
+                            <h4>동방</h4>
                             <p>
                                 경기도 안산시 상록구 한양대학로 55 복지관 425호
                             </p>
                         </div>
                     </div>
                     <div class="outer-card">
-                        <div class="card-label">가이드</div>
+                        <div class="card-label">팁</div>
                         <div class="inner-card">
-                            <h4>답변을 빨리 받는 팁</h4>
+                            <h4>히든 퀘스트</h4>
                             <p>
-                                재촉은 삼가고, 알고 싶은 핵심과 원하시는 답을 한
-                                문장으로 간단히 남겨 주시면 더 빠르게 답변드릴
-                                수 있습니다.
+                                회장에게 코라코라를 외치면 음료수를 사줍니다
+                                부끄럽다면 메모장으로 보여주세요
                             </p>
                         </div>
                     </div>
