--- a/apply.html
+++ b/apply.html
@@ -2,15 +2,9 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=1024" />
-        <meta
-            name="description"
-            content="HY-CoRA 신입 부원 모집 안내. 코딩에 대한 열정만 있다면 전공, 학년 무관 누구나 지원 가능합니다. 모집 일정과 지원 방법을 확인하고 하이코라의 멤버가 되어보세요."
-        />
-        <meta
-            name="keywords"
-            content="동아리 모집, 신입부원, 가입 안내, 지원 방법, 코딩 동아리 지원"
-        />
+        <meta name="viewport" content="width=1024">
+        <meta name="description" content="HY-CoRA 신입 부원 모집 안내. 코딩에 대한 열정만 있다면 전공, 학년 무관 누구나 지원 가능합니다. 모집 일정과 지원 방법을 확인하고 하이코라의 멤버가 되어보세요.">
+        <meta name="keywords" content="동아리 모집, 신입부원, 가입 안내, 지원 방법, 코딩 동아리 지원">
         <title>HY-CoRA - 모집/가입안내</title>
         <link
             rel="stylesheet"
@@ -41,7 +35,7 @@
             <!-- 상단 소개 배너 -->
             <div class="top-header">
                 <div class="top-title">
-                    <h3>모집안내</h3>
+                    <h2>모집안내</h2>
                 </div>
                 <div class="top-subtitle">
                     <p>HY-CoRA에서 함께 성장할 새로운 맴버를 모집합니다.</p>
@@ -74,16 +68,16 @@
                         <div class="recruitment-card">
                             <div class="recruitment-line"></div>
                             <div class="recruitment-box">
-                                2000.00.00 ~ 2000.00.00: 사전 안내 공개
+                                2025.03.11 ~ 2025.03.12: 1학기 가두모집(이후 상시모집)
                             </div>
                             <div class="recruitment-box">
-                                2000.00.00 ~ 2000.00.00: 사전 안내 공개
+                                2025.08.14 ~ 2025.08.24: 재등록 기간
                             </div>
                             <div class="recruitment-box">
-                                2000.00.00 ~ 2000.00.00: 사전 안내 공개
+                                2025.09.09 ~ 2025.09.10: 2학기 가두모집(이후 상시모집)
                             </div>
                             <div class="recruitment-box">
-                                2000.00.00 ~ 2000.00.00: 사전 안내 공개
+                                2026.02.XX ~ 2026.02.XX: 재등록 기간(미정)
                             </div>
                         </div>
                     </div>
@@ -101,8 +95,8 @@
                         <div class="inner-card">
                             <h4>지원 자격 / FAQ / 문의</h4>
                             <p>
-                                <b id="FAQ-hyperlink">지원자격 · FAQ · 문의</b>
-                                페이지에서 자세히 확인하세요.
+                                <b>지원자격</b> · <b>FAQ</b> ·
+                                <b>문의</b> 페이지에서 자세히 확인하세요.
                             </p>
                         </div>
                     </div>
@@ -144,7 +138,7 @@
                             <div class="apply-circle"><h2>1</h2></div>
                             <div class="apply-order">
                                 <div class="apply-text">
-                                    <h3>지원서 제출</h3>
+                                    <h3>지원서 작성</h3>
                                     <p>모집 기간에 폼 제출</p>
                                 </div>
                                 <button class="apply-button">
@@ -156,8 +150,8 @@
                             <div class="apply-circle"><h2>2</h2></div>
                             <div class="apply-order">
                                 <div class="apply-text">
-                                    <h3>지원서 제출</h3>
-                                    <p>모집 기간에 폼 제출</p>
+                                    <h3>입금 확인 후 가입 완료</h3>
+                                    <p>카톡방 일괄 초대</p>
                                 </div>
                             </div>
                         </div>
@@ -170,8 +164,8 @@
                         <div class="inner-card">
                             <h4>모집 일정 확인</h4>
                             <p>
-                                <b id="apply_schedule">모집 일정</b>에서 학기별
-                                타임라인을 확인하세요.
+                                <b>모집 일정</b>에서 학기별 타임라인을
+                                확인하세요.
                             </p>
                         </div>
                     </div>
@@ -179,11 +173,12 @@
                         <div class="card-label">문의</div>
                         <div class="inner-card">
                             <h4>질문이 있다면</h4>
-                            <p id="inquiry"><b>문의</b>로 연락주세요.</p>
+                            <p><b>문의</b>로 연락주세요.</p>
                         </div>
                     </div>
                 </div>
 
+                <div class="container">
                 <h3 id="faq">FAQ</h3>
                 <div class="learning-wrap">
                     <div class="FAQ-card">
@@ -196,7 +191,7 @@
                     <div class="FAQ-card">
                         <b>▼ 신입이라 실력이 많이 부족한데 지원해도 되나요?</b>
                         <p>
-                            네. 기본 스터디 트랙부터 시작하며, 코드리뷰와 페어로
+                            네. 기본 스터디 트랙부터 시작하며, 소수 정예의 코드리뷰를 통해
                             빠르게 성장할 수 있게 도와드립니다.
                         </p>
                     </div>
@@ -208,13 +203,15 @@
                         </p>
                     </div>
                     <div class="FAQ-card">
-                        <b>▼ 전공/학년 제한이 있나요?</b>
+                        <b>▼ 친목활동이 뭐가 있나요?</b>
                         <p>
-                            없습니다. 배우고 협업하려는 마음이 있으면 누구나
-                            환영합니다.
+                            코라코라 빙고판, 코라코라 간식사업 등이 준비되어 있습니다.
                         </p>
                     </div>
                 </div>
+                </div>
+
+
                 <h3 id="contact">문의</h3>
                 <div class="two-cards">
                     <div class="outer-card">
@@ -227,10 +224,10 @@
                     <div class="outer-card">
                         <div class="card-label">연락처</div>
                         <div class="inner-card">
-                            <h4>전화번호</h4>
+                            <h4>이메일</h4>
                             <p>
-                                회장 이 한: 010-3552-2044 <br />부회장 최관우:
-                                010-3410-4697
+                                회장 이 한: hi385790@hanyang.ac.kr <br />부회장 최관우:
+                                qwer768213g@gmail.com
                             </p>
                         </div>
                     </div>
@@ -239,7 +236,7 @@
                     <div class="outer-card">
                         <div class="card-label">방문</div>
                         <div class="inner-card">
-                            <h4>동방</h4>
+                            <h4>오프라인</h4>
                             <p>
                                 경기도 안산시 상록구 한양대학로 55 복지관 425호
                             </p>
@@ -250,8 +247,7 @@
                         <div class="inner-card">
                             <h4>히든 퀘스트</h4>
                             <p>
-                                회장에게 코라코라를 외치면 음료수를 사줍니다
-                                부끄럽다면 메모장으로 보여주세요
+                                회장에게 "코라코라"를 외치면 음료수를 사줍니다.
                             </p>
                         </div>
                     </div>
