--- a/apply.html
+++ b/apply.html
@@ -95,8 +95,8 @@
                         <div class="inner-card">
                             <h4>지원 자격 / FAQ / 문의</h4>
                             <p>
-                                <b>지원자격</b> · <b>FAQ</b> ·
-                                <b>문의</b> 페이지에서 자세히 확인하세요.
+                                <b id="FAQ-hyperlink">지원자격 · FAQ · 문의</b>
+                                페이지에서 자세히 확인하세요.
                             </p>
                         </div>
                     </div>
@@ -173,7 +173,7 @@
                         <div class="card-label">문의</div>
                         <div class="inner-card">
                             <h4>질문이 있다면</h4>
-                            <p><b>문의</b>로 연락주세요.</p>
+                            <p id="inquiry"><b>문의</b>로 연락주세요.</p>
                         </div>
                     </div>
                 </div>
