--- a/apply.html
+++ b/apply.html
@@ -164,7 +164,7 @@
                         <div class="inner-card">
                             <h4>모집 일정 확인</h4>
                             <p>
-                                <b>모집 일정</b>에서 학기별 타임라인을
+                                <b id="apply_schedule">모집 일정</b>에서 학기별 타임라인을
                                 확인하세요.
                             </p>
                         </div>
