Update on Fix-18

--- a/activities_detail.html
+++ b/activities_detail.html
@@ -28,9 +28,14 @@
     <main>
         <!-- 상단: JS가 제목/메타 채움 -->
         <div class="top-header">
-            <h5>세부사항</h5>
-            <h2>활동 제목</h2>
-            <h5>날짜 · 시간 · 장소</h5>
+            <div class="top-title">
+                    <h2>활동 상세</h2>
+                </div>
+                <div class="top-subtitle">
+                    <h5>
+                        시간
+                    </h5>
+                </div>
         </div>
 
         <section class="info-section">
