Update on Fix-19

--- a/404.html
+++ b/404.html
@@ -2,9 +2,25 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=1024">
+        <meta name="viewport" content="width=1024" />
+        <meta
+            name="description"
+            content="HY-CoRA 신입 부원 모집 안내. 코딩에 대한 열정만 있다면 전공, 학년 무관 누구나 지원 가능합니다. 모집 일정과 지원 방법을 확인하고 하이코라의 멤버가 되어보세요."
+        />
+        <meta
+            name="keywords"
+            content="동아리 모집, 신입부원, 가입 안내, 지원 방법, 코딩 동아리 지원"
+        />
         <title>404 - Page Not Found</title>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+        />
         <link rel="stylesheet" href="style.css" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
         <style>
             .not-found-container {
                 display: flex;
@@ -33,10 +49,17 @@
             }
         </style>
     </head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=1024" />
+
+        <link rel="stylesheet" href="style.css" />
+    </head>
     <body>
+        <!-- Header -->
         <header class="header">
             <div class="container header-container">
-                <h1 class="logo">HY-CoRA</h1>
+                <h1 class="logo"><a href="index.html">HY-CoRA</a></h1>
                 <nav class="nav">
                     <ul>
                         <li><a href="about.html">소개</a></li>
