--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                         </p>
                     </div>
                     <div class="intro-image-placeholder"></div>
+
+                    <p class="intro-note">
+                        이 웹사이트는 PC 환경에 최적화되어 있습니다.
+                    </p>
                 </div>
             </section>
 
