--- a/apply.html
+++ b/apply.html
@@ -2,9 +2,15 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=1024">
-        <meta name="description" content="HY-CoRA 신입 부원 모집 안내. 코딩에 대한 열정만 있다면 전공, 학년 무관 누구나 지원 가능합니다. 모집 일정과 지원 방법을 확인하고 하이코라의 멤버가 되어보세요.">
-        <meta name="keywords" content="동아리 모집, 신입부원, 가입 안내, 지원 방법, 코딩 동아리 지원">
+        <meta name="viewport" content="width=1024" />
+        <meta
+            name="description"
+            content="HY-CoRA 신입 부원 모집 안내. 코딩에 대한 열정만 있다면 전공, 학년 무관 누구나 지원 가능합니다. 모집 일정과 지원 방법을 확인하고 하이코라의 멤버가 되어보세요."
+        />
+        <meta
+            name="keywords"
+            content="동아리 모집, 신입부원, 가입 안내, 지원 방법, 코딩 동아리 지원"
+        />
         <title>HY-CoRA - 모집/가입안내</title>
         <link
             rel="stylesheet"
@@ -68,13 +74,15 @@
                         <div class="recruitment-card">
                             <div class="recruitment-line"></div>
                             <div class="recruitment-box">
-                                2025.03.11 ~ 2025.03.12: 1학기 가두모집(이후 상시모집)
+                                2025.03.11 ~ 2025.03.12: 1학기 가두모집(이후
+                                상시모집)
                             </div>
                             <div class="recruitment-box">
                                 2025.08.14 ~ 2025.08.24: 재등록 기간
                             </div>
                             <div class="recruitment-box">
-                                2025.09.09 ~ 2025.09.10: 2학기 가두모집(이후 상시모집)
+                                2025.09.09 ~ 2025.09.10: 2학기 가두모집(이후
+                                상시모집)
                             </div>
                             <div class="recruitment-box">
                                 2026.02.XX ~ 2026.02.XX: 재등록 기간(미정)
@@ -141,16 +149,21 @@
                                     <h3>지원서 작성</h3>
                                     <p>모집 기간에 폼 제출</p>
                                 </div>
-                                <button class="apply-button">
+                                <a
+                                    href="https://forms.gle/EPcfwqswu7xmg1VHA"
+                                    target="_blank"
+                                    rel="noopener"
+                                    class="apply-button"
+                                >
                                     지원 폼 열기
-                                </button>
+                                </a>
                             </div>
                         </div>
                         <div class="apply-row">
                             <div class="apply-circle"><h2>2</h2></div>
                             <div class="apply-order">
                                 <div class="apply-text">
-                                    <h3>입금 확인 후 가입 완료</h3>
+                                    <h3>확인 후 가입 완료</h3>
                                     <p>카톡방 일괄 초대</p>
                                 </div>
                             </div>
@@ -164,8 +177,8 @@
                         <div class="inner-card">
                             <h4>모집 일정 확인</h4>
                             <p>
-                                <b id="apply_schedule">모집 일정</b>에서 학기별 타임라인을
-                                확인하세요.
+                                <b id="apply_schedule">모집 일정</b>에서 학기별
+                                타임라인을 확인하세요.
                             </p>
                         </div>
                     </div>
@@ -179,38 +192,42 @@
                 </div>
 
                 <div class="container">
-                <h3 id="faq">FAQ</h3>
-                <div class="learning-wrap">
-                    <div class="FAQ-card">
-                        <b>▼ 전공/학년 제한이 있나요?</b>
-                        <p>
-                            없습니다. 배우고 협업하려는 마음이 있으면 누구나
-                            환영합니다.
-                        </p>
-                    </div>
-                    <div class="FAQ-card">
-                        <b>▼ 신입이라 실력이 많이 부족한데 지원해도 되나요?</b>
-                        <p>
-                            네. 기본 스터디 트랙부터 시작하며, 소수 정예의 코드리뷰를 통해
-                            빠르게 성장할 수 있게 도와드립니다.
-                        </p>
-                    </div>
-                    <div class="FAQ-card">
-                        <b>▼ 회비가 있나요?</b>
-                        <p>
-                            운영비와 행사비 일부를 위해 학기별 소정의 회비가
-                            있을 수 있으며, OT에서 투명하게 안내합니다.
-                        </p>
-                    </div>
-                    <div class="FAQ-card">
-                        <b>▼ 친목활동이 뭐가 있나요?</b>
-                        <p>
-                            코라코라 빙고판, 코라코라 간식사업 등이 준비되어 있습니다.
-                        </p>
+                    <h3 id="faq">FAQ</h3>
+                    <div class="learning-wrap">
+                        <div class="FAQ-card">
+                            <b>▼ 전공/학년 제한이 있나요?</b>
+                            <p>
+                                없습니다. 배우고 협업하려는 마음이 있으면 누구나
+                                환영합니다.
+                            </p>
+                        </div>
+                        <div class="FAQ-card">
+                            <b
+                                >▼ 신입이라 실력이 많이 부족한데 지원해도
+                                되나요?</b
+                            >
+                            <p>
+                                네. 기본 스터디 트랙부터 시작하며, 소수 정예의
+                                코드리뷰를 통해 빠르게 성장할 수 있게
+                                도와드립니다.
+                            </p>
+                        </div>
+                        <div class="FAQ-card">
+                            <b>▼ 회비가 있나요?</b>
+                            <p>
+                                운영비와 행사비 일부를 위해 학기별 소정의 회비가
+                                있을 수 있으며, OT에서 투명하게 안내합니다.
+                            </p>
+                        </div>
+                        <div class="FAQ-card">
+                            <b>▼ 친목활동이 뭐가 있나요?</b>
+                            <p>
+                                코라코라 빙고판, 코라코라 간식사업 등이 준비되어
+                                있습니다.
+                            </p>
+                        </div>
                     </div>
                 </div>
-                </div>
-
 
                 <h3 id="contact">문의</h3>
                 <div class="two-cards">
@@ -226,8 +243,8 @@
                         <div class="inner-card">
                             <h4>이메일</h4>
                             <p>
-                                회장 이 한: hi385790@hanyang.ac.kr <br />부회장 최관우:
-                                qwer768213g@gmail.com
+                                회장 이 한: hi385790@hanyang.ac.kr <br />부회장
+                                최관우: qwer768213g@gmail.com
                             </p>
                         </div>
                     </div>
