Update on Fix-19

--- a/about.html
+++ b/about.html
@@ -505,6 +505,22 @@
 
                         <!-- 지표 -->
                         <h3 id="indicator">지표</h3>
+                        <section class="learning-wrap">
+                            <div class="info-box gallery">
+                                <div class="info-card">
+                                    <img
+                                        class="event-cover"
+                                        src="images/indicator.png"
+                                        alt="지표 대체 이미지"
+                                        style="
+                                            width: 100%;
+                                            display: block;
+                                            object-fit: cover;
+                                        "
+                                    />
+                                </div>
+                            </div>
+                        </section>
                     </div>
                 </div>
             </section>
