--- a/about.html
+++ b/about.html
@@ -464,7 +464,7 @@
                                             데이터 분석 기초반
                                         </h4>
                                         <p3 class="learning-desc"
-                                            >데이터 처리 기초를 배웁니다.</p3
+                                            >해당 스터디는 python jupyter 노트북 환경에서 데이터분석에 주로 사용되는 python 패키지(pandas, numpy, seaborn, matplotlib 등)의 사용법을 익히고 이를 실전에 적용해보는 것을 목표로 하고 있습니다. 이론과 실습을 병행하여 스터디를 진행할 예정입니다. </p3
                                         >
                                     </div>
                                 </article>
