--- a/activities.html
+++ b/activities.html
@@ -1,110 +1,116 @@
 <!DOCTYPE html>
 <html lang="ko">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=1024">
-        <meta name="description" content="HY-CoRA의 다채로운 활동을 소개합니다. 정규 스터디, MT, asv(안산사이언스벨리) 부스 활동, 선배와의 네트워킹 데이, 코라코라 열공단 등 선배, 동기, 후배와 함께하는 즐거운 동아리 활동을 확인해보세요.">
-        <meta name="keywords" content="동아리 활동, 코라코라 열공단, 자율 스터디, MT, 네트워킹, 코딩 프로젝트">
-        <title>HY-CoRA - 활동내용</title>
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-        />
-        <link rel="stylesheet" href="style.css" />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap"
-            rel="stylesheet"
-        />
-    </head>
-    <body>
-        <header class="header">
-            <div class="container header-container">
-                <h1 class="logo"><a href="index.html">HY-CoRA</a></h1>
-                <nav class="nav">
-                    <ul>
-                        <li><a href="about.html">소개</a></li>
-                        <li><a href="activities.html">활동내용</a></li>
-                        <li><a href="apply.html">모집안내/가입</a></li>
-                        <li><a href="announcement.html">공지사항</a></li>
-                    </ul>
-                </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=1024" />
+    <meta
+      name="description"
+      content="HY-CoRA의 다채로운 활동을 소개합니다. 정규 스터디, MT, asv(안산사이언스벨리) 부스 활동, 선배와의 네트워킹 데이, 코라코라 열공단 등 선배, 동기, 후배와 함께하는 즐거운 동아리 활동을 확인해보세요."
+    />
+    <meta
+      name="keywords"
+      content="동아리 활동, 코라코라 열공단, 자율 스터디, MT, 네트워킹, 코딩 프로젝트"
+    />
+    <title>HY-CoRA - 활동내용</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container header-container">
+        <h1 class="logo"><a href="index.html">HY-CoRA</a></h1>
+        <nav class="nav">
+          <ul>
+            <li><a href="about.html">소개</a></li>
+            <li><a href="activities.html">활동내용</a></li>
+            <li><a href="apply.html">모집안내/가입</a></li>
+            <li><a href="announcement.html">공지사항</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+      <!-- 상단 소개 배너 -->
+      <div class="top-header">
+        <div class="top-title">
+          <h2>활동내용</h2>
+        </div>
+        <div class="top-subtitle">
+          <p>
+            다양한 스터디, 프로젝트, 봉사활동, 친목활동을 통해 함께 성장하고
+            있습니다.
+          </p>
+        </div>
+      </div>
+
+      <section class="activities-section">
+        <div class="container">
+          <div class="activities-nav">
+            <button class="nav-button active">전체</button>
+            <button class="nav-button">모집중</button>
+            <button class="nav-button">진행중</button>
+            <button class="nav-button">예정</button>
+            <button class="nav-button">완료</button>
+          </div>
+
+          <div class="activities-container">
+            <!-- JS가 activity-card들을 자동으로 채워 넣음 -->
+          </div>
+          <div id="pagination" class="pagination"></div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container footer-content">
+        <!-- Top: Copyright -->
+        <div class="footer-top">
+          <p>Copyright 2025. HY-CoRA All rights reserved.</p>
+          <a
+            href="https://www.instagram.com/hycora_hanyang/"
+            target="_blank"
+            rel="noopener"
+            class="social-icon"
+          >
+            <i class="fab fa-instagram"></i>
+          </a>
+        </div>
+
+        <!-- Divider -->
+        <div class="footer-divider" aria-hidden="true"></div>
+
+        <!-- Bottom: 좌측 주소/메일 / 우측 회장·부회장 -->
+        <div class="footer-bottom">
+          <p class="footer-detail">
+            <strong>Made by HY-CoRA</strong> <br />
+            2025 ver. Create by <strong> 팀</strong> 이한, 최관우, 김현준,
+            김혜윤, 박아진, 박강호, 최지민 <br /><br />
+            경기도 안산시 상록구 한양대학로 55 복지관 425호<br />
+            hycora369@gmail.com
+          </p>
+          <div class="contacts">
+            <div class="contact-block">
+              <h3>회장</h3>
+              <p>이한 010-3552-2044</p>
             </div>
-        </header>
-
-        <main>
-            <!-- 상단 소개 배너 -->
-            <div class="top-header">
-                <div class="top-title">
-                    <h2>활동내용</h2>
-                </div>
-                <div class="top-subtitle">
-                    <p>
-                        다양한 스터디, 프로젝트, 봉사활동, 친목활동을 통해 함께
-                        성장하고 있습니다.
-                    </p>
-                </div>
+            <div class="contact-block">
+              <h3>부회장</h3>
+              <p>최관우 010-3410-4697</p>
             </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
-            <section class="activities-section">
-                <div class="container">
-                    <div class="activities-nav">
-                        <button class="nav-button active">전체</button>
-                        <button class="nav-button">모집중</button>
-                        <button class="nav-button">진행중</button>
-                        <button class="nav-button">예정</button>
-                        <button class="nav-button">완료</button>
-                    </div>
-
-                    <div class="activities-container">
-                        <!-- JS가 activity-card들을 자동으로 채워 넣음 -->
-                    </div>
-                    <div id="pagination" class="pagination"></div>
-                </div>
-            </section>
-        </main>
-
-        <footer class="footer">
-            <div class="container footer-content">
-                <!-- Top: Copyright -->
-                <div class="footer-top">
-                    <p>Copyright 2025. HY-CoRA All rights reserved.</p>
-                    <a
-                        href="https://www.instagram.com/hycora_hanyang/"
-                        target="_blank"
-                        rel="noopener"
-                        class="social-icon"
-                    >
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                </div>
-
-                <!-- Divider -->
-                <div class="footer-divider" aria-hidden="true"></div>
-
-                <!-- Bottom: 좌측 주소/메일 / 우측 회장·부회장 -->
-                <div class="footer-bottom">
-                    <p class="footer-detail">
-                        <strong>Made by HY-CoRA</strong> <br />
-                        2025 ver. Create by <strong> 팀</strong> 이한, 최관우,
-                        김현준, 김혜윤, 박아진, 박강호, 최지민 <br /><br />
-                        경기도 안산시 상록구 한양대학로 55 복지관 425호<br />
-                        hycora369@gmail.com
-                    </p>
-                    <div class="contacts">
-                        <div class="contact-block">
-                            <h3>회장</h3>
-                            <p>이한 010-3552-2044</p>
-                        </div>
-                        <div class="contact-block">
-                            <h3>부회장</h3>
-                            <p>최관우 010-3410-4697</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
-
-        <script src="js/activities.js"></script>
-        <script src="js/nav.js"></script>
-    </body>
+    <script src="js/activities.js"></script>
+    <script src="js/nav.js"></script>
+  </body>
 </html>
